Updated build targets for new i18n package.

--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -29,7 +29,7 @@ jar.includes =           **/*.txt,\
                          **/*.xml,\
                          **/*.def,\
                          **/*.properties
-consumer.helper.path =   **/consumer/helper/**
+consumer.helper.path =   **/consumer/**
 javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
