--- a/plugins/org.eclipse.datatools.connectivity.oda/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda/plugin.xml
@@ -13,6 +13,7 @@
       <library name="odaconsumer-helper.jar">
          <export name="*"/>
       </library>
+      <library name="lib/birt-core.jar"/>
    </runtime>
    <requires>
       <import plugin="org.eclipse.core.runtime"/>
