--- a/plugins/org.eclipse.datatools.connectivity.oda/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda/plugin.xml
@@ -17,6 +17,7 @@
    </runtime>
    <requires>
       <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.junit" optional="true"/>
    </requires>
 
 	<extension-point id="dataSource" name="Open Data Access Design and Run-time Extension" schema="schema/datasource.exsd"/>
