--- a/plugins/org.eclipse.datatools.connectivity.oda/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin
    id="org.eclipse.datatools.connectivity.oda"
-   name="Open Data Access"
+   name="DTP Open Data Access"
    version="3.0.0"
    provider-name="Eclipse.org">
 
