--- a/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
@@ -1,5 +1,6 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+               plugin.xml,\
+               genericdb.jar
+jars.compile.order = genericdb.jar
+source.genericdb.jar = src/
+output.genericdb.jar = bin/
