Fix build problems

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/build.properties
@@ -1,6 +1,8 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               dse.jar
+               dse.jar,\
+               icons/,\
+               plugin.properties
 jars.compile.order = dse.jar
 source.dse.jar = src/
 output.dse.jar = bin/
