--- a/plugins/org.eclipse.datatools.connectivity.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/build.properties
@@ -1,7 +1,9 @@
-source.connectivityui.jar = src/
-output.connectivityui.jar = bin/
 bin.includes = plugin.xml,\
-               connectivityui.jar,\
                icons/,\
                plugin.properties,\
-               about.html
+               about.html,\
+               META-INF/,\
+               connectivityui.jar
+jars.compile.order = connectivityui.jar
+source.connectivityui.jar = src/
+output.connectivityui.jar = bin/
