Enhanced build script.  Fixed Javadoc comments.

--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -11,11 +11,12 @@
 #  
 #************************************************************************
 #
+source.root =            ./src/
+test.source.root =       ./test/
 source.odaconsumer-helper.jar = ./src/org/eclipse/datatools/connectivity/oda/consumer/
 source.oda.jar =         ./src/org/eclipse/datatools/connectivity/oda/
-source.root =            ./src/
 package.oda.jar =        ./org/eclipse/datatools/connectivity/oda/
-output.oda.jar =         ./bin/
+bin.dir =         		 ./bin/
 jars.compile.order =     oda.jar,\
                          odaconsumer-helper.jar
 jars.extra.classpath =   lib/birt-core.jar
