--- a/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
@@ -1,6 +1,7 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               genericdb.jar
+               genericdb.jar,\
+               icons/
 jars.compile.order = genericdb.jar
 source.genericdb.jar = src/
 output.genericdb.jar = bin/
