Enhanced Ant build script.

--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -34,8 +34,9 @@ consumer.helper.path =   **/consumer/**
 javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
-build.result.folder =    ./
-temp.folder =            ./temp.folder/
+build.result.dir =	 	 ./
+temp.dir =		         ./tempdir/
 plugin.destination =     ./
-javadoc.dir =            ./doc/api/
+javadoc.dir =            doc/api/
+download.dir =           ./download/
 plugin.version =         3.0.0
