Bug 114448: renamed project build.properties keys

--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -11,11 +11,11 @@
 #  
 #************************************************************************
 #
-source.root =            ./src/
-test.source.root =       ./test/
-source.odaconsumer-helper.jar = ./src/org/eclipse/datatools/connectivity/oda/consumer/
-source.oda.jar =         ./src/org/eclipse/datatools/connectivity/oda/
 package.oda.jar =        ./org/eclipse/datatools/connectivity/oda/
+src.dir =            	 ./src/
+oda.src.dir =         	 ./src/org/eclipse/datatools/connectivity/oda/
+consumer.helper.path =   **/consumer/**
+test.src.dir =       	 ./test/
 bin.dir =         		 ./bin/
 jars.compile.order =     oda.jar,\
                          odaconsumer-helper.jar
@@ -30,7 +30,6 @@ jar.includes =           **/*.txt,\
                          **/*.xml,\
                          **/*.def,\
                          **/*.properties
-consumer.helper.path =   **/consumer/**
 javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
@@ -40,3 +39,4 @@ plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
 plugin.version =         3.0.0
+custom = true
