--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -53,6 +53,13 @@ ServersView.action.refresh = &Refresh
 ServersView.action.newCP = &New...
 ServersView.action.exportCPs = &Export...
 ServersView.action.importCPs = &Import...
+DSE.Connect.label = &Connect
+DSE.Disconnect.label = &Disconnect
+DSE.Duplicate.label = Du&plicate
+DSE.Delete.label = D&elete
+DSE.Rename.label = Re&name
+DSE.Refresh.label = Ref&resh
+DSE.Ping.label = &Ping...
 NewConnectionProfileWizard.title = New connection profile
 NewConnectionProfileWizard.create.failure = Create connection profile failure
 NewConnectionProfileWizardPage.Status.DuplicateName = Connection profile name already exists!
