--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -27,3 +27,4 @@ DSE.ShowCategory.label = &Show Category
 DSE.Name = Data Source Explorer
 DSE.ContentExtension.Decorator = Connection Profile Decorator
 DSE.ContentExtension.Decorator.Description = Decorate content extension node when connecting to the server fails.
+DSE.content = Data Source Explorer Extension
