--- a/plugins/org.eclipse.datatools.sqltools.editor.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/build.properties
@@ -1,5 +1,15 @@
-source.. = src/
-output.. = bin/
+source.sqleditorframe.jar = src/
+output.sqleditorframe.jar = bin/
 bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+               sqleditorframe.jar,\
+               plugin.xml,\
+               .settings/,\
+               schema/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
