*** empty log message ***

--- a/plugins/org.eclipse.datatools.sqltools.result/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/build.properties
@@ -1,5 +1,13 @@
-source.. = src/
-output.. = bin/
+source.sqlresult.jar = src/
+output.sqlresult.jar = bin/
 bin.includes = META-INF/,\
-               .,\
+               sqlresult.jar,\
                src/
+               
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
